--- a/renxi/default.css
+++ b/renxi/default.css
@@ -12,7 +12,7 @@ a {color:#000;font-size:14px;}
 #error{margin:0 auto;text-align:center;margin-top:60px;display:none;}
 .hand{cursor:pointer;}
 .say {
-    font-size: 16px; /* Tăng kích thước chữ */
+    font-size: 14px; /* Tăng kích thước chữ */
     font-weight: bold; /* Làm đậm chữ */
 }
 .space{margin-right:150px;}
@@ -61,4 +61,24 @@ a {color:#000;font-size:14px;}
     60% { transform: rotate(-45deg) scale(1.1); }
     80% { transform: rotate(-45deg) scale(1); }
     100% { transform: rotate(-45deg) scale(1); }
+}
+@media (max-width: 768px) {
+    #main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+
+    #wrap {
+        position: relative;
+        top: 10vh; /* Dịch xuống 10% chiều cao màn hình */
+    }
+
+    #canvas {
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+        height: auto;
+    }
 }
